# speckle-stacker

./: CMakeLists.txt  README.md  array2.h  array_base.h  bispectrum.h  constants.h  crosscorrel.h  dimvector.h  log.cpp  log.h  main.cpp  math_functions.h  multidimarray.h  phasemap.cpp  phasemap.h  phasereco.cpp  phasereco.h  point.h  range.h  rect.h  types.h  units.h  utility.cpp  utility.h  videoio.cpp  videoio.h  window_function.h
.github/workflows/: cmake-multi-platform.yml
cmake/: version.cmake
config/: config.h  testconfig.h.in
doc/: Doxyfile
include/: array2.h  array_base.h  bispectrum.h  constants.h  crosscorrel.h  dimvector.h  log.h  math_functions.h  phasemap.h  phasereco.h  point.h  range.h  rect.h  types.h  units.h  utility.h  videoio.h  window_function.h
smip-cli/: CMakeLists.txt  main.cpp
src/: phasereco.cpp  smip_export_test.cpp  utility.cpp  videoio.cpp
tests/: CMakeLists.txt  array1_test.cpp  array2_test.cpp  array3_test.cpp  array4_test.cpp  array5_test.cpp  bispectrum_test.cpp  correl_test.cpp  opencv_test.cpp  range_test.cpp  smip_test.cpp  test_macros.h  test_type_name.h
